Blaise: package tree changes

--- a/GraphExplorer/src/graphexplorer/resources/HelpFile.html
+++ b/GraphExplorer/src/graphexplorer/resources/HelpFile.html
@@ -17,10 +17,10 @@ and open the template in the editor.
       <p>
       Currently, the application has support for generating <b>empty</b>, <b>circle</b>,
       <b>star</b>, <b>wheel</b>, and <b>complete</b> graphs.
-      In addition, a <img src="./random-uniform24.png"></img><b>uniform random graph</b> may be generated (directed or undirected) using either
+      In addition, a <img src="./random-uniform24.png"/><b>uniform random graph</b> may be generated (directed or undirected) using either
       (i) a number of nodes and probability of edge,
       or (ii) a number of nodes and a number of edges.
-      A <img src="./random-pref24.png"></img><b>preferential attachment graph</b> may be generated, using a small initial uniform      random graph as a seed, in which each vertex is added with either
+      A <img src="./random-pref24.png"/><b>preferential attachment graph</b> may be generated, using a small initial uniform      random graph as a seed, in which each vertex is added with either
       (i) a fixed number of connections,
       or (ii) a variable number of connections (with a user-specified probability distribution).
       </p>
@@ -54,11 +54,11 @@ and open the template in the editor.
       <h2>Layout Methods</h2>
       Supported layouts are summarized here.
 
-      <h3><img src="./layout-circle24.png"></img>Circular Layout</h3>
+      <h3><img src="./layout-circle24.png"/>Circular Layout</h3>
       Places nodes around a circle.
-      <h3><img src="./layout-random24.png"></img>Random Layout</h3>
+      <h3><img src="./layout-random24.png"/>Random Layout</h3>
       Places nodes at random within a box.
-      <h3><img src="./layout-spring24.png"></img>Spring layout</h3>
+      <h3><img src="./layout-spring24.png"/>Spring layout</h3>
       Uses simulated physics to generate ideal locations for nodes and edges. Forces include
       (i) a repulsive force between each pair of vertices,
       (ii) an attractive force between each pair of connected vertices, and
